--- a/Win64/Debug/MabiWnd.cfg
+++ b/Win64/Debug/MabiWnd.cfg
@@ -1,7 +1,7 @@
 [MabiWindow]
 Enabled = 1
 ; Mode Options
-; EnableMxBTN   - Enable the disabled windows maximize button
-; AutoMx        - Enable the disabled windows maximize button and auto maximize window
+; EnableMxBTN   - Enable the disabled window maximize button
+; AutoMx        - Enable the disabled window maximize button and auto maximize window
 ; BorderlessFS  - Maximize the window to boarderless fullscreen (no titlebar etc.)
 Mode = AutoMx
