--- a/MabiWnd.dproj
+++ b/MabiWnd.dproj
@@ -102,6 +102,7 @@
         </DelphiCompile>
         <DCCReference Include="GameWindow.pas"/>
         <DCCReference Include="Tools.pas"/>
+        <DCCReference Include="WindowManagement.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
